# python-katas

./: .gitignore  .katarc  .katarc.example  AGENTS.md  README.md  pyproject.toml  setup-platform.py  window_dev_installer.ps1
.claude/commands/: python-runner.md  skill-creator.md  update-agents.md
.claude/skills/catchup/: SKILL.md
.claude/skills/python-runner/: SKILL.md
.claude/skills/skill-creator/: SKILL.md  best-practices.md  helper-script-template.bat  helper-script-template.sh  template.md
.gemini/commands/: catchup.md
agent/commands/: catchup.yml
agent/skills/: catchup.md  index.md
agent/sub-agent/: driver.md  index.md  navigator.md  paircoding-coach.md  reviewer.md  tdd-coach.md
agent/sub-agent/navigator/: examples.md
docs/: TDD-guide.md  command-reference.md  contributing.md  directory-structure.md  driver-guide.md  index.md  navigator-usage-guide.md  scenario-examples.md
docs/archive/: agent-dialogue-guide.md
hidden-number/: README.md  main.py
hidden-number/app/: game_service.py
hidden-number/docs/: architecture.md
hidden-number/domain/: game.py  protocols.py
hidden-number/infra/: random_generator.py
hidden-number/tests/: test_game.py  test_game_service.py  test_random_generator.py  test_tkinter_ui.py
hidden-number/ui/: tkinter_ui.py
